--- a/package.json
+++ b/package.json
@@ -1,47 +1,54 @@
 {
-  "name": "vce_desktop",
-  "version": "1.0.0",
-  "main": "main.js",
-  "license": "MIT",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "electron .",
-    "package": "electron-packager . FIDDOOPOS --all",
-    "win": "electron-packager . vce_fiddo_pos --win --asar"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject",
+    "test": "jest --watchAll",
+    "build_android": "expo build:android",
+    "build_ios": "expo build:ios"
   },
-  "devDependencies": {
-    "electron": "^8.0.1",
-    "electron-packager": "^14.1.1",
-    "redux-devtools-extension": "^2.13.8"
-  },
-  "homepage": "./load.html",
-  "build": {
-    "appId": "com.vce_fidddo.pos",
-    "category": "public.app-category.utilities",
-    "directories": {
-      "buildResources": "./"
-    },
-    "win": {
-      "target": "squirrel"
-    }
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "combine-reducers": "^1.0.0",
-    "docx2html": "^1.1.0",
-    "electron-reload": "^1.5.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "electron-winstaller": "^4.0.0",
-    "localforage": "^1.7.3",
+    "@expo/vector-icons": "~10.0.0",
+    "@react-native-community/masked-view": "0.1.5",
+    "@react-navigation/bottom-tabs": "^5.0.0",
+    "@react-navigation/native": "^5.0.0",
+    "@react-navigation/stack": "^5.0.0",
+    "@react-navigation/web": "~1.0.0-alpha.9",
+    "expo": "~36.0.0",
+    "expo-asset": "~8.0.0",
+    "expo-constants": "~8.0.0",
+    "expo-document-picker": "~8.0.0",
+    "expo-file-system": "~8.0.0",
+    "expo-font": "~8.0.0",
+    "expo-web-browser": "~8.0.0",
+    "formik": "^2.1.4",
     "lodash": "^4.17.15",
-    "mammoth": "^1.4.9",
-    "pdf-text-extract": "^1.5.0",
-    "pdf-to-text": "^0.0.7",
+    "moment": "^2.24.0",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-check-box": "^2.1.7",
+    "react-native-countdown-component": "^2.6.0",
+    "react-native-dialog": "^5.6.0",
+    "react-native-easy-toast": "^1.2.0",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-paper": "^3.6.0",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5"
   },
-  "prettier": {
-    "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": true
-  }
+  "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "babel-preset-expo": "~8.0.0",
+    "jest-expo": "~36.0.1"
+  },
+  "private": true
 }
